# reaper-sdk

./: CMakeLists.txt  DEVELOPER_ENV.md  README
.github/: CODEOWNERS
.github/workflows/: docs.yml
cmake/: ReaperPlugin.cmake
docs/: ADMIN.md  API-FREEZE.md  ara2-attachment.md  branch-protection.main.json  reaper_stream.md  warp.md
reaper-plugins/: freeze_engine.cpp  reaper_plugin.h  roundtrip_latency.cpp  roundtrip_latency.h  stt_utils.cpp  stt_utils.h
reaper-plugins/reaper_atmos/: CMakeLists.txt  reaper_atmos.cpp
reaper-plugins/reaper_csurf/: CMakeLists.txt  csurf_main.cpp  csurf_mcu.cpp  csurf_www.cpp
reaper-plugins/reaper_mp3/: CMakeLists.txt  mp3_index.cpp  mp3dec.cpp  pcmsink_mp3lame.cpp  pcmsrc_mp3dec.cpp  res.rc_mac_dlg
reaper-plugins/reaper_mp3/mpglib/: dct64_i386.cpp  decode_i386.cpp  layer3.cpp  mpglib.h
reaper-plugins/reaper_stt/: CMakeLists.txt  reaper_stt.cpp  stt_stubs.h
scripts/: gen_mac_resources.sh
sdk/: config_ini.h  reaper_api_loader.hpp  reaper_atmos.h  reaper_plugin.h  reaper_plugin_functions.h  reaper_plugin_fx_embed.h  reaper_stream.cpp  reaper_stream.h  timecode.cpp  timecode.h
sdk/example_m3u/: import_m3u.cpp
sdk/example_midi_arp/: midi_arpeggiator.cpp
sdk/example_musicxml/: README.md  musicxml_util.cpp  sample.musicxml  sample_project.rpp
sdk/example_raw/: pcmsink_raw.cpp  pcmsrc_raw.cpp
sdk/example_stream/: README.txt  basic_stream.cpp  pcmstream_demo.cpp
sdk/otio/: otio.cpp
sdk/reaper_stream/: reaper_stream.cpp  reaper_stream.h
sdk/track_playlist/: track_playlist.cpp  track_playlist.h  track_playlist_demo.cpp
